--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Astronomy Picture of the Day - NASA",
+  "name": "nasa-astronomy-pic-of-the-day",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -28,17 +28,17 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "moment": "^2.22.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
-    "react": "^16.3.2",
+    "react": "^16.13.1",
     "react-dev-utils": "^5.0.1",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.13.1",
     "react-redux": "^5.0.7",
+    "react-scripts": "3.4.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "resolve": "1.6.0",
